# rust-sveltekit

./: Cargo.toml  README.md
src/: main.rs
ui/: package-lock.json  package.json
