[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["tokio", "http1", "macros"] }
mime_guess = "2.0.4"
rust-embed = "6.6.1"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"]}
